# jaxoplanet-case-studies

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.md
docs/notebooks/: astrometric.ipynb  transit.ipynb
